Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    three_x_y_at_one =\n",
+    "    three_x_y_at_one = list(map(lambda))\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_three(x):\n",
