--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -64,7 +64,7 @@
     "    pass\n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    return 3*3*x\n",
+    "    return \n",
     "    pass\n",
     "\n",
     "def three_x_y_at_six(x):\n",
