Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,10 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
@@ -68,10 +66,11 @@
     "    pass\n",
     "\n",
     "def three_x_y_at_six(x):\n",
-    "    return 3*3*3*x\n",
+    "    return 3*6*x\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
+    "    return 3*9*x\n",
     "    pass"
    ]
   },
