--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -116,7 +116,7 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return list(map(lambda x_values: three_x_y_at_one))\n",
+    "    return list(map(lambda ))\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
