--- a/index.ipynb
+++ b/index.ipynb
@@ -120,10 +120,11 @@
     "    pass\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return list(map(lambda x_values: three_x_y_at_))\n",
+    "    return list(map(lambda x_values: three_x_y_at_three (x_value), x_values))\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
+    "    return list(map())\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
