--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -128,7 +128,7 @@
     "    pass\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return list(map(lambda x_values: three_x_y_at))\n",
+    "    return list\n",
     "    pass"
    ]
   },
