--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -419,11 +419,9 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "lines",
+         "mode": "line",
          "name": "f(x, y) at y=1",
          "text": [],
-         "type": "scatter",
-         "uid": "4493a65e-7c07-11e9-afb2-f790360a5b31",
          "x": [
           0,
           1,
@@ -437,26 +435,12 @@
           9,
           10
          ],
-         "y": [
-          0,
-          3,
-          6,
-          9,
-          12,
-          15,
-          18,
-          21,
-          24,
-          27,
-          30
-         ]
+         "y": null
         },
         {
-         "mode": "lines",
+         "mode": "line",
          "name": "f(x, y) at y=3",
          "text": [],
-         "type": "scatter",
-         "uid": "4493a906-7c07-11e9-afb2-f790360a5b31",
          "x": [
           0,
           1,
@@ -470,26 +454,12 @@
           9,
           10
          ],
-         "y": [
-          0,
-          9,
-          18,
-          27,
-          36,
-          45,
-          54,
-          63,
-          72,
-          81,
-          90
-         ]
+         "y": null
         },
         {
-         "mode": "lines",
+         "mode": "line",
          "name": "f(x, y) at y=6",
          "text": [],
-         "type": "scatter",
-         "uid": "4493aa50-7c07-11e9-afb2-f790360a5b31",
          "x": [
           0,
           1,
@@ -503,26 +473,12 @@
           9,
           10
          ],
-         "y": [
-          0,
-          18,
-          36,
-          54,
-          72,
-          90,
-          108,
-          126,
-          144,
-          162,
-          180
-         ]
+         "y": null
         },
         {
-         "mode": "lines",
+         "mode": "line",
          "name": "f(x, y) at y=9",
          "text": [],
-         "type": "scatter",
-         "uid": "4493ab40-7c07-11e9-afb2-f790360a5b31",
          "x": [
           0,
           1,
@@ -536,19 +492,7 @@
           9,
           10
          ],
-         "y": [
-          0,
-          27,
-          54,
-          81,
-          108,
-          135,
-          162,
-          189,
-          216,
-          243,
-          270
-         ]
+         "y": null
         }
        ],
        "layout": {
@@ -556,10 +500,10 @@
        }
       },
       "text/html": [
-       "<div id=\"a9b3dd5f-92b8-45e0-9534-7ea9de896c44\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a9b3dd5f-92b8-45e0-9534-7ea9de896c44\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30], \"type\": \"scatter\", \"uid\": \"449e88da-7c07-11e9-afb2-f790360a5b31\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90], \"type\": \"scatter\", \"uid\": \"449e8a92-7c07-11e9-afb2-f790360a5b31\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180], \"type\": \"scatter\", \"uid\": \"449e8b82-7c07-11e9-afb2-f790360a5b31\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270], \"type\": \"scatter\", \"uid\": \"449e8c4a-7c07-11e9-afb2-f790360a5b31\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"eca262a6-80f6-415b-bf1b-0ddac49dc241\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"eca262a6-80f6-415b-bf1b-0ddac49dc241\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"a9b3dd5f-92b8-45e0-9534-7ea9de896c44\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a9b3dd5f-92b8-45e0-9534-7ea9de896c44\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30], \"type\": \"scatter\", \"uid\": \"449e88da-7c07-11e9-afb2-f790360a5b31\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90], \"type\": \"scatter\", \"uid\": \"449e8a92-7c07-11e9-afb2-f790360a5b31\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180], \"type\": \"scatter\", \"uid\": \"449e8b82-7c07-11e9-afb2-f790360a5b31\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": [0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270], \"type\": \"scatter\", \"uid\": \"449e8c4a-7c07-11e9-afb2-f790360a5b31\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"eca262a6-80f6-415b-bf1b-0ddac49dc241\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"eca262a6-80f6-415b-bf1b-0ddac49dc241\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
