--- a/index.ipynb
+++ b/index.ipynb
@@ -586,7 +586,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_one():\n",
-    "    return x**2\n",
+    "    return 3\n",
     "    pass"
    ]
   },
