--- a/index.ipynb
+++ b/index.ipynb
@@ -599,6 +599,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
+    "    return 9\n",
     "    pass"
    ]
   },
@@ -611,6 +612,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
+    "    return 18\n",
     "    pass"
    ]
   },
@@ -623,6 +625,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
+    "    re\n",
     "    pass"
    ]
   },
