--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    re\n",
+    "    return 27\n",
     "    pass"
    ]
   },
