--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -630,31 +630,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def df_dx_3xy(x_value, y_value):\n",
-    "    return 3*y_value\n",
+    "    return list\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "df_dx_3xy(2, 1) # 3"
    ]
