Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -770,7 +770,8 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    \n",
+    "    output = []\n",
+    "    for term in \n",
     "    pass"
    ]
   },
