--- a/index.ipynb
+++ b/index.ipynb
@@ -771,7 +771,8 @@
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    output = []\n",
-    "    for term in \n",
+    "    for term in list_of_terms:\n",
+    "        constant = term \n",
     "    pass"
    ]
   },
