--- a/index.ipynb
+++ b/index.ipynb
@@ -772,7 +772,8 @@
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    output = []\n",
     "    for term in list_of_terms:\n",
-    "        constant = term \n",
+    "        constant = term [0]\n",
+    "        x_value = term \n",
     "    pass"
    ]
   },
