Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -773,7 +773,8 @@
     "    output = []\n",
     "    for term in list_of_terms:\n",
     "        constant = term [0]\n",
-    "        x_value = term \n",
+    "        x_exponent = term [1]\n",
+    "        y\n",
     "    pass"
    ]
   },
