--- a/index.ipynb
+++ b/index.ipynb
@@ -774,7 +774,8 @@
     "    for term in list_of_terms:\n",
     "        constant = term [0]\n",
     "        x_exponent = term [1]\n",
-    "        y\n",
+    "        y_exponent = term [-1]\n",
+    "        \n",
     "    pass"
    ]
   },
