Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -775,7 +775,7 @@
     "        constant = term [0]\n",
     "        x_exponent = term [1]\n",
     "        y_exponent = term [2]\n",
-    "        term_output = list(map(lambda term:))\n",
+    "        term_output = constant * x\n",
     "        \n",
     "    pass"
    ]
