--- a/index.ipynb
+++ b/index.ipynb
@@ -775,7 +775,7 @@
     "        constant = term [0]\n",
     "        x_exponent = term [1]\n",
     "        y_exponent = term [2]\n",
-    "        term_output = constant * x_value**\n",
+    "        term_output = constant * x_value** x_exponent\n",
     "        \n",
     "    pass"
    ]
