--- a/index.ipynb
+++ b/index.ipynb
@@ -776,7 +776,8 @@
     "        x_exponent = term [1]\n",
     "        y_exponent = term [2]\n",
     "        term_output = constant * x_value** x_exponent*y_value**y_exponent\n",
-    "        \n",
+    "        return term_output\n",
+    "    \n",
     "        \n",
     "    pass"
    ]
