Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -776,7 +776,7 @@
     "        x_exponent = term [1]\n",
     "        y_exponent = term [2]\n",
     "        term_output = constant * x_value** x_exponent*y_value**y_exponent\n",
-    "        return term_output\n",
+    "        output.append(term_outp)\n",
     "    \n",
     "        \n",
     "    pass"
