--- a/index.ipynb
+++ b/index.ipynb
@@ -777,7 +777,7 @@
     "        y_exponent = term [2]\n",
     "        term_output = constant * x_value** x_exponent*y_value**y_exponent\n",
     "        output.append(term_output)\n",
-    "    return term_outp\n",
+    "    return sum(output)\n",
     "    \n",
     "        \n",
     "    pass"
