--- a/index.ipynb
+++ b/index.ipynb
@@ -893,7 +893,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    r\n",
+    "    constant = term [0]\n",
     "    pass"
    ]
   },
