Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -893,7 +893,8 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    constant = term [0]\n",
+    "    constant = term [0]*term [1]\n",
+    "    exponent = term\n",
     "    pass"
    ]
   },
