--- a/index.ipynb
+++ b/index.ipynb
@@ -894,7 +894,8 @@
    "source": [
     "def term_df_dx(term):\n",
     "    constant = term [0]*term [1]\n",
-    "    exponent = term\n",
+    "    exponent = term [1]-1\n",
+    "    return \n",
     "    pass"
    ]
   },
