--- a/index.ipynb
+++ b/index.ipynb
@@ -886,26 +886,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
     "    constant = term [0]*term [1]\n",
     "    exponent = term [1]-1\n",
-    "    return ()\n",
+    "    return (constant, exponent, term[2])\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 1, 1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "four_x_squared_y = (4, 2, 1)\n",
     "term_df_dx(four_x_squared_y) # (8, 1, 1) "
