--- a/index.ipynb
+++ b/index.ipynb
@@ -969,7 +969,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    derivative_terms = list(map(lamb))\n",
+    "    derivative_terms = list(map(lambda term_df_dx:))\n",
     "    pass"
    ]
   },
