--- a/index.ipynb
+++ b/index.ipynb
@@ -969,7 +969,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    derivative_terms = list(map(lambda list_of_terms: term_df_dx (list_of_terms,x,y)))\n",
+    "    derivative_terms = list(map(lambda list_of_terms: term_df_dx (function_term), list_of_ter))\n",
     "    pass"
    ]
   },
