Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -970,6 +970,7 @@
    "source": [
     "def df_dx(list_of_terms):\n",
     "    derivative_terms = list(map(lambda list_of_terms: term_df_dx (function_term), list_of_terms))\n",
+    "    return list(map(lambda derivative))\n",
     "    pass"
    ]
   },
