--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -970,7 +970,7 @@
    "source": [
     "def df_dx(list_of_terms):\n",
     "    derivative_terms = list(map(lambda list_of_terms: term_df_dx (function_term), list_of_terms))\n",
-    "    return list(map(lambda derivative_term: derivative_term [0] >0, ))\n",
+    "    return list(map(lambda derivative_term: derivative))\n",
     "    pass"
    ]
   },
