--- a/index.ipynb
+++ b/index.ipynb
@@ -962,28 +962,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
     "    derivative_terms = list(map(lambda function_term: term_df_dx (function_term), list_of_terms))\n",
-    "    return list(map(lambda derivative_term: derivative_term [0] >0, derivative_terms))\n",
+    "    return list(filter(lambda derivative_term: derivative_term [0] >0, derivative_terms))\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[True, True, False]"
+       "[(8, 1, 1), (3, 0, 0)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
