--- a/index.ipynb
+++ b/index.ipynb
@@ -1008,7 +1008,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return \n",
+    "    return term[0]*term[2]\n",
     "    pass"
    ]
   },
