Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1008,7 +1008,8 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return term[0]*term[2]\n",
+    "    constant = term[0]*term[2]\n",
+    "    exponent\n",
     "    pass"
    ]
   },
