--- a/index.ipynb
+++ b/index.ipynb
@@ -1009,7 +1009,7 @@
    "source": [
     "def term_df_dy(term):\n",
     "    constant = term[0]*term[2]\n",
-    "    exponent\n",
+    "    exponent = term[2]-1\n",
     "    pass"
    ]
   },
