--- a/index.ipynb
+++ b/index.ipynb
@@ -1010,6 +1010,7 @@
     "def term_df_dy(term):\n",
     "    constant = term[0]*term[2]\n",
     "    exponent = term[2]-1\n",
+    "    return (constant, exponent, )\n",
     "    pass"
    ]
   },
