Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1001,22 +1001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
     "    constant = term[0]*term[2]\n",
     "    exponent = term[2]-1\n",
-    "    return (constant, term [1])\n",
+    "    return (constant, term [1], exponent)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1023,7 @@
        "(4, 2, 1)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
