--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1150,7 +1150,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    derivative_terms = list(map(lambda function_term: term_df_dy(function_term), list_of_terms))\n",
+    "    derivative_terms = list(map(lambda function_term: term_df_dy()))\n",
     "    pass"
    ]
   },
