--- a/index.ipynb
+++ b/index.ipynb
@@ -1151,7 +1151,7 @@
    "source": [
     "def df_dy(list_of_terms):\n",
     "    derivative_terms = list(map(lambda function_term: term_df_dy(function_term), list_of_terms))\n",
-    "    return\n",
+    "    return list(filter(lambda derivative_term))\n",
     "    pass"
    ]
   },
